5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1637_1054.log
== TEST (2019-04-09 10:45:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("esceva as coordenadas de X: ")
var2 = input("escreva as coordenadas de Y: ")
formula = 2*var1 + var2 
if (formula == 3):
	mensagem = "ponto pertence a reta"
if (formula != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:45:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("esceva as coordenadas de X: ")
var2 = input("escreva as coordenadas de Y: ")
formula = 2*var1 + var2 
if (formula == 3):
	mensagem = "ponto pertence a reta"
if (formula != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.163629
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto nao pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:46:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("esceva as coordenadas de X: ")
var2 = input("escreva as coordenadas de Y: ")
formula = 2*var1 + var2 
if (formula.lower() == 3):
	mensagem = "ponto pertence a reta"
if (formulalower() != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if (formulalower() != 3):
NameError: name 'formulalower' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:46:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("esceva as coordenadas de X: ")
var2 = input("escreva as coordenadas de Y: ")
formula = 2*var1 + var2 
if (formula.lower() == 3):
	mensagem = "ponto pertence a reta"
if (formulalower() != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.172607
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/1054/main.py", line 9, in <module>
    if (formulalower() != 3):
NameError: name 'formulalower' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:46:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("esceva as coordenadas de X: ")
var2 = input("escreva as coordenadas de Y: ")
formula = 2*var1 + var2 
if (formula.lower() == 3):
	mensagem = "ponto pertence a reta"
if (formula.lower() != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:47:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("esceva as coordenadas de X: ")
var2 = input("escreva as coordenadas de Y: ")
formula = 2*var1 + var2 
if (formula.lower() == 3):
	mensagem = "ponto pertence a reta"
if (formula.lower() != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.174381
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto nao pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:48:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("esceva as coordenadas de X: ")
var2 = input("escreva as coordenadas de Y: ")
formula = 2*var1 + var2 
if (formula.lower() == 3):
	mensagem = "ponto pertence a reta"
if (formula.lower() != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("escreva as coordenadas de X: ")
var2 = input("escreva as coordenadas de Y: ")
formula = 2*var1 + var2 
if (formula.lower() == 3):
	mensagem = "ponto pertence a reta"
if (formula.lower() != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:50:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("escreva as coordenadas de X: ")
var2 = input("escreva as coordenadas de Y: ")
formula = 2*var1 + var2 
if (formula.lower() == 3):
	mensagem = "ponto pertence a reta"
if (formula.lower() != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.210717
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto nao pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = input("escreva as coordenadas de X: ")
var2 = input("escreva as coordenadas de Y: ")
formula = 2*var1 + var2 
if (formula.lower() == 3):
	mensagem = "ponto pertence a reta"
if (formula.lower() != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:51:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = float(input("escreva as coordenadas de X: "))
var2 = float(input("escreva as coordenadas de Y: "))
formula = 2*var1 + var2 
if (formula.lower() == 3):
	mensagem = "ponto pertence a reta"
if (formula.lower() != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (formula.lower() == 3):
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:52:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = float(input("escreva as coordenadas de X: "))
var2 = float(input("escreva as coordenadas de Y: "))
formula = 2*var1 + var2 
if (formula == 3):
	mensagem = "ponto pertence a reta"
if (formula != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:52:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var1 = float(input("escreva as coordenadas de X: "))
var2 = float(input("escreva as coordenadas de Y: "))
formula = 2*var1 + var2 
if (formula == 3):
	mensagem = "ponto pertence a reta"
if (formula != 3):
	mensagem = "ponto nao pertence a reta"
print(mensagem)
-- EXECUTION TIME:
0.151698
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
